--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -45,11 +45,18 @@
 
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
-                            <p class='govuk-list app-list--definition'>
-                              <a href='slurrystorage/current/guidance' class="govuk-link--no-visited-state"><strong>Version 1 (current)</a></strong><br>
-                              This version was not tested yet<br>
-                                <span class="govuk-body govuk-!-font-size-14">#Last updated on 26 May 2022<br/>
-                                </span></p>
+        <p class='govuk-list app-list--definition'>
+          <a href='slurrystorage/current/guidance' class="govuk-link--no-visited-state"><strong>Version 2 (current)</a></strong><br>
+          Changes to implement post-user testing. First round of iterations (Issue 49 to Issue 53.)<br>
+            <span class="govuk-body govuk-!-font-size-14">#No changes added yet<br/>
+            </span></p>
+
+            <p class='govuk-list app-list--definition'>
+              <a href='slurrystorage/v1/guidance' class="govuk-link--no-visited-state"><strong>Version 1</a></strong><br>
+              This version is curently undergoing user testing. UR activity is in progress between 20th May 2022 and 7th June 2022<br>
+                <span class="govuk-body govuk-!-font-size-14">#Last updated on 26 May 2022<br/>
+                </span></p>
+
 
       </div>
       <div class="proto-admin">
