planning permission fixes

--- a/app/views/slurrystorage/current/planning-permission.html
+++ b/app/views/slurrystorage/current/planning-permission.html
@@ -38,13 +38,13 @@
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission-2" name="planning-permission" type="radio" value="Applied for but not yet approved" {{ checked("planning-permission", "Applied for but not yet approved") }}>
+                <input class="govuk-radios__input" id="planning-permission-2" name="planning-permission" type="radio" value="Applied" {{ checked("planning-permission", "Applied") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission-2">
                   Applied for but not yet approved
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="Not yet applied for but expected to be in place by 31 December 2022" {{ checked("planning-permission", "Not yet applied for but expected to be in place by 31 December 2022") }}>
+                <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="Not yet applied" {{ checked("planning-permission", "Not yet applied") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission-3">
                   Not yet applied for but expected to be in place by 31 December 2022</label>
               </div>
