Iteration 1 changes 49 to 57

--- a/app/views/slurrystorage/current/guidance.html
+++ b/app/views/slurrystorage/current/guidance.html
@@ -83,7 +83,7 @@
   <li>a list of the items you’d like to buy for the project</li>
   </ul>
 
-<p>After you have gone through the checker, you’ll get a score showing how well your project fits the funding priorities.</p>
+<p>After you have gone through the checker, you’ll be told whether your project is in a priority funding area.</p>
 <p>RPA wants to fund projects that: </p>
 <ul>
   <li>improve farm productivity</li>
@@ -93,7 +93,6 @@
   <li>reduce greenhouse gas emissions</li>
 </ul>
 
-<p>When you are happy with your score, you can submit your details to the RPA.</p>
 <p>You can go back through the checker as many times as you like but you can only submit your details once.</p>
 
 <p class="call-to-action"><a href="start" class="govuk-link--no-visited-state">Check if your project can apply for a grant.</a></p>
