--- a/app/views/slurrystorage/current/project-summary.html
+++ b/app/views/slurrystorage/current/project-summary.html
@@ -23,7 +23,7 @@ Project summary
   <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
         <h2 class="govuk-heading-l">Your project items</h2>
-        <p class="govuk-body">We have calculated the total grant amount based on the standardised costs for each item.<br>
+        <p class="govuk-body">We have calculated the estimated total grant amount based on the standardised costs for each item.<br>
 </p>
 
 
