--- a/app/views/slurrystorage/current/standardised-costs.html
+++ b/app/views/slurrystorage/current/standardised-costs.html
@@ -31,9 +31,9 @@
 
          <div class="govuk-form-group">
         <h2 class="govuk-heading-l">Standardised costs for eligible items</h2>
-        <p class="govuk-body">The Slurry Infrastructure grant uses standardised costs for the eligible items.</p>
-        <p class="govuk-body">You can apply for a grant of 50% of the standardised cost of an item.</p>
-        <p class="govuk-body">At full application stage, you can choose between a grant of 50% of the standardised cost of an item or submitting three quotes.</p>
+        <p class="govuk-body">The Slurry Infrastructure grant uses standardised costs for the eligible items. The grant is 50% of the standardised cost.  </p>
+        <p class="govuk-body">At full application stage, you can choose between the standard grant for an item or you can submit 3 quotes. </p>
+        <p class="govuk-body">If you submit quotes, your grant amount is based on 50% of the cheapest quote.</p>
 
         {{ govukWarningText({
           text: "Items may cost more than the standardised cost.",
@@ -59,7 +59,7 @@
             text: "Above-ground steel tank"
             },
             {
-            html: "£22 per m<sup>3</sup>"
+            html: "£22 per cubic metre"
             }
           ],
           [
@@ -67,7 +67,7 @@
             text: "Above-ground concrete tank"
             },
             {
-            html: "£17 per m<sup>3</sup>"
+            html: "£17 per cubic metre"
             }
           ],
           [
@@ -75,7 +75,7 @@
             html: "Below-ground in-situ cast-reinforced<br> concrete tank"
             },
             {
-            html: "£15 per m<sup>3</sup>"
+            html: "£15 per cubic metre"
             }
           ],
           [
@@ -83,7 +83,7 @@
             text: "Earth-bank lagoon (unlined)"
             },
             {
-            html: "£8 per m<sup>3</sup>"
+            html: "£8 per cubic metre"
             }
           ],
           [
@@ -91,7 +91,7 @@
             text: "Earth-bank lagoon (lined)"
             },
             {
-            html: "£12 per m<sup>3</sup>"
+            html: "£12 per cubic metre"
             }
           ],
           [
@@ -99,7 +99,7 @@
             html: "Stores using pre-cast rectangular<br> concrete panels"
             },
             {
-            html: "£14 per m<sup>3</sup>"
+            html: "£14 per cubic metre"
             }
           ],
           [
@@ -107,7 +107,7 @@
             text: "Large-volume supported slurry bag"
             },
             {
-            html: "£20 per m<sup>3</sup>"
+            html: "£20 per cubic metre"
             }
           ],
           [
@@ -115,7 +115,7 @@
             text: "Slatted-floor stores"
             },
             {
-            html: "£14 per m<sup>3</sup>"
+            html: "£14 per cubic metre"
             }
           ]
           ]
@@ -139,7 +139,7 @@
             html: "Rigid covers for above-ground steel<br> or concrete stores"
             },
             {
-            html: "£8 per m<sup>2</sup>"
+            html: "£8 per square metre"
             }
           ],
           [
@@ -147,7 +147,7 @@
             html: "Fixed flexible covers for above-ground<br> steel and concrete stores and <br>earth-bank lagoons"
             },
             {
-            html: "£4 per m<sup>2</sup>"
+            html: "£4 per square metre"
             }
           ],
           [
@@ -155,7 +155,7 @@
             html: "Floating flexible cover for earth-bank<br> lagoons only"
             },
             {
-            html: "£3 per m<sup>2</sup>"
+            html: "£3 per square metre"
             }
           ]
           ]
@@ -179,7 +179,7 @@
             text: "Glass-reinforced plastic (GRP)"
             },
             {
-            html: "£25 per m<sup>3</sup>"
+            html: "£25 per cubic metre"
             }
           ],
           [
@@ -187,7 +187,7 @@
             text: "Plastic "
             },
             {
-            html: "£26 per m<sup>3</sup>"
+            html: "£26 per cubic metre"
             }
           ],
           [
@@ -195,7 +195,7 @@
             text: "Pre-cast concrete "
             },
             {
-            html: "£27 per m<sup>3</sup>"
+            html: "£27 per cubic metre"
             }
           ],
           [
@@ -203,7 +203,7 @@
             text: "In-situ cast concrete"
             },
             {
-            html: "£30 per m<sup>3</sup>"
+            html: "£30 per cubic metre"
             }
           ]
           ]
@@ -259,7 +259,7 @@
             html: "Galvanised steel pipework <br>100mm diameter"
             },
             {
-            html: "£14 per meter"
+            html: "£14 per metre"
             }
           ],
           [
@@ -267,7 +267,7 @@
             html: "Galvanised steel pipework <br>150mm diameter diameter"
             },
             {
-            html: "£24 per meter"
+            html: "£24 per metre"
             }
           ]
           ]
@@ -291,7 +291,7 @@
             html: "Under-floor transfer channels"
             },
             {
-            html: "£25 per meter"
+            html: "£25 per metre"
             }
           ]
           ]
@@ -312,18 +312,18 @@
           rows: [
           [
             {
-            html: "Tank wall mixers with tank capacity<br> up to 1,200m<sup>3</sup>"
+            html: "Tank wall mixers with tank capacity<br> up to 1,200 cubic metre"
             },
             {
-            html: "£350 per meter"
+            html: "£350 per tank"
             }
           ],
           [
             {
-            html: "Tank wall mixers with tank capacity <br> up to 8,000m<sup>3</sup>"
+            html: "Tank wall mixers with tank capacity <br> up to 8,000 cubic metre"
             },
             {
-            html: "£1,000 per meter"
+            html: "£1,000 per tank"
             }
           ]
           ]
@@ -347,7 +347,7 @@
             html: "Inspection platform with ladder<br> for above-ground concrete and<br> steel tanks"
             },
             {
-            html: "£800 per unit"
+            html: "£800 per item"
             }
           ],
           [
@@ -355,7 +355,7 @@
             html: "Safety fencing for below-ground<br> stores,earth-bank lagoons and<Br> slurry bags "
             },
             {
-            html: "£55 per unit"
+            html: "£55 per metre"
             }
           ]
           ]
