--- a/app/views/slurrystorage/current/storage-capacity-increase.html
+++ b/app/views/slurrystorage/current/storage-capacity-increase.html
@@ -23,7 +23,7 @@ Current storage capacity
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
         {{ govukInput({
           label: {
-            html: "How much will your serviceable <br>capacity increase by to get you <br>to 6 months?",
+            html: "What estimated additional volume do you need to have 6 months' serviceable storage?",
             classes: "govuk-label--l",
             isPageHeading: true
           },
