--- a/app/views/slurrystorage/current/store-type.html
+++ b/app/views/slurrystorage/current/store-type.html
@@ -26,7 +26,7 @@ What type of cover will you have?
           <fieldset class="govuk-fieldset" aria-describedby="storetype-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What type of store will you have?
+                What type of store do you want?
               </h1>
             </legend>
             <div id="storetype-hint" class="govuk-hint">
@@ -59,7 +59,7 @@ What type of cover will you have?
       </form>
     </div>
 
-    
+
 
       </div>
 {% endblock %}
