--- a/app/views/slurrystorage/current/tenancy-length.html
+++ b/app/views/slurrystorage/current/tenancy-length.html
@@ -25,7 +25,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Do you have a tenancy agreement for at least 5 years after grant approval?
+                Do you have a tenancy agreement for 5 years after the final grant claim?
               </h1>
             </legend>
             <br>
@@ -57,7 +57,7 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>You must own the land or have a tenancy in place for 5 years after the grant is approved.</p>
+          <p>You must own the land or have a tenancy in place for 5 years after the final grant claim.</p>
           <a href="#">
           </a>
 
