--- a/app/views/slurrystorage/current/tenancy.html
+++ b/app/views/slurrystorage/current/tenancy.html
@@ -69,7 +69,7 @@
           <h2 class="app-step-nav-related__heading">
             <span class="app-step-nav-related__pretitle">Eligibility</span>
             </h2>
-            <p>You must own the land or have a tenancy in place for 5 years after the grant is approved.</p>
+            <p>You must own the land or have a tenancy in place for 5 years after the final grant claim.</p>
             <a href="#">
             </a>
 
