--- a/app/views/slurrystorage/current/potential-grant.html
+++ b/app/views/slurrystorage/current/potential-grant.html
@@ -25,7 +25,7 @@ Potential grant funding
       Potential grant funding
     </h1>
 
-    <p class="govuk-body">Based on a grant of 50% of standardised item costs and the store capacity you entered, we estimate you could be eligible for a grant of £142,500.</p>
+    <p class="govuk-body">Based on the standardised grant and the store capacity you entered, we estimate you could be eligible for a grant of £142,500.</p>
 
 
     {{ govukWarningText({
