v2 iteration changes 58 to 68

--- a/app/views/slurrystorage/current/cover-type.html
+++ b/app/views/slurrystorage/current/cover-type.html
@@ -77,7 +77,7 @@ What type of cover will you have?
                 {{ storeTypeCost[storeType].text }}
               </li>
               <li>
-                Serviceable capacity increase:  {{ data['current-capacity'] }}m<sup>3</sup>
+                Increase:  {{ data['current-capacity'] }}m<sup>3</sup>
               </li>
 
             </ul>
