--- a/app/views/slurrystorage/current/project-type-fail.html
+++ b/app/views/slurrystorage/current/project-type-fail.html
@@ -26,12 +26,17 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This grant is only for:</p>
+      <p class="govuk-body">This grant is for:</p>
       <ul class="govuk-body">
-        <li>building a new store</li>
-        <li>expanding an existing store</li>
-        <li>reconstructing an existing store that is no longer serviceable. </li>
+        <li>replacing an existing store that is no longer fit for purpose </li>
+        <li>adding a new store to increase existing</li>
+        <li>expanding an existing store (for example, by adding an extra ring to a steel tank)</li>
       </ul>
+      
+      <p>A store is no longer fit for purpose if it has reached the end of its design life (for example, it may be suspectable to leaks or failure).</p>
+
+
+
 
 
 
