--- a/app/views/slurrystorage/current/standardised-costs.html
+++ b/app/views/slurrystorage/current/standardised-costs.html
@@ -30,7 +30,7 @@
        <form id="mainForm" class="form" action="store-type" method="post">
 
          <div class="govuk-form-group">
-        <h2 class="govuk-heading-l">Standardised costs for eligible items</h2>
+        <h2 class="govuk-heading-l">Grant amounts for eligible items</h2>
         <p class="govuk-body">The Slurry Infrastructure grant uses standardised costs for the eligible items. The grant is 50% of the standardised cost.  </p>
         <p class="govuk-body">At full application stage, you can choose between the standard grant for an item or you can submit 3 quotes. </p>
         <p class="govuk-body">If you submit quotes, your grant amount is based on 50% of the cheapest quote.</p>
