--- a/app/views/slurrystorage/current/project-items.html
+++ b/app/views/slurrystorage/current/project-items.html
@@ -92,7 +92,7 @@ What type of cover will you have?
                   {{ storeTypeCost[storeType].text }}
                 </li>
                 <li>
-                  Serviceable capacity increase:  {{ data['current-capacity'] }}m<sup>3</sup>
+                  Increase:  {{ data['current-capacity'] }}m<sup>3</sup>
                 </li>
 
               </ul>
@@ -113,7 +113,7 @@ What type of cover will you have?
                   {{ coverTypeCost[coverType].text }}
                 </li>
                 <li>
-                  {{ data['cover-size'] }}m<sup>2</sup>
+                  Size: {{ data['cover-size'] }}m<sup>2</sup>
                 </li>
 
               </ul>
