--- a/app/views/slurrystorage/current/project-type.html
+++ b/app/views/slurrystorage/current/project-type.html
@@ -37,7 +37,7 @@ Project type
                   items: [
                 {
                   value: "Build a new store",
-                  text: "Build a new store",
+                  text: "Replace an existing store that is no longer servicable",
                   checked: checked("projecttype", "Build a new store")
                 },
 
@@ -49,7 +49,7 @@ Project type
 
                 {
                   value: "Reconstruct an existing store that is no longer serviceable",
-                  text: "Reconstruct an existing store that is no longer serviceable",
+                  text: "Add a new store to increase existing capacity ",
                   checked: checked("projecttype", "Reconstruct an existing store that is no longer serviceable")
                 },
                 {
@@ -75,13 +75,13 @@ Project type
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">This grant is only for:</p>
+          <p class="govuk-body">This grant is for:</p>
           <ul class="govuk-body">
-            <li>building a new store</li>
-            <li>expanding an existing store</li>
-            <li>reconstructing an existing store that is no longer serviceable </li>
+            <li>replacing an existing store that is no longer fit for purpose </li>
+            <li>adding a new store to increase existing</li>
+            <li>expanding an existing store (for example, by adding an extra ring to a steel tank)</li>
           </ul>
-          <p class="govuk-body">A store may be non-serviceable because it was built before 1991 and was exempt from the Silage, Slurry and Agricultural Fuel Oil Regulations (SSAFO) requirements or because it has reached the end of its design life (for example, it may be susceptible to leaks or failure).</p>
+          <p class="govuk-body">A store is no longer fit for purpose if it has reached the end of its design life (for example, it may be suspectable to leaks or failure).</p>
       </div>
    </div>
 
