--- a/app/views/slurrystorage/current/tenancy-length.html
+++ b/app/views/slurrystorage/current/tenancy-length.html
@@ -57,7 +57,7 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>You must own the land or have a tenancy in place for 5 years after the final grant claim.</p>
+          <p>You must own the land or have a tenancy in place for 5 years after the final grant payment.</p>
           <a href="#">
           </a>
 
