Standardised costs changes

--- a/app/views/slurrystorage/current/storage-capacity-increase.html
+++ b/app/views/slurrystorage/current/storage-capacity-increase.html
@@ -55,7 +55,7 @@ Current storage capacity
           {% if data['storetype'] %}
           <div>
             <h2 class="app-step-nav-related__heading">
-              <span class="app-step-nav-related__pretitle">Store type</span>
+              <span class="app-step-nav-related__pretitle">Store</span>
               </h2>
             <nav role="navigation" aria-labelledby="subsection-title">
               <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
