--- a/app/views/slurrystorage/current/cover-size.html
+++ b/app/views/slurrystorage/current/cover-size.html
@@ -66,7 +66,7 @@ Cover size
                   {{ storeTypeCost[storeType].text }}
                 </li>
                 <li>
-                  Serviceable capacity increase:  {{ data['current-capacity'] }}m<sup>3</sup>
+                  Increase:  {{ data['current-capacity'] }}m<sup>3</sup>
                 </li>
 
               </ul>
