--- a/app/views/slurrystorage/current/existing-size-storage.html
+++ b/app/views/slurrystorage/current/existing-size-storage.html
@@ -116,7 +116,7 @@ Existing size storage
               <li>make your storage serviceable if capacity is already 6 months or more</li>
             </ul>
             </p>
-            <p class=govuk-body">A store may be non-serviceable because it was built before 1991 and was exempt from the Silage, Slurry and Agricultural Fuel Oil Regulations (SSAFO) requirements or because it has reached the end of its design life (for example, it may be susceptible to leaks or failure).
+            <p class=govuk-body">A store is no longer fit for purpose if it has reached the end of its design life (for example, it may be susceptible to leaks or failure).
           </p>
      </div>
    </div>
