--- a/app/views/slurrystorage/current/project-items.html
+++ b/app/views/slurrystorage/current/project-items.html
@@ -73,6 +73,7 @@ What type of cover will you have?
 
       </form>
     </div>
+
     <div class="govuk-grid-column-one-third">
 
       <div class="app-step-nav-related app-step-nav-related--singular">
@@ -123,12 +124,7 @@ What type of cover will you have?
         {% endif %}
 
 
-
-
-
-
-
-
       </div>
+            </div>
 
 {% endblock %}
