--- a/app/views/slurrystorage/current/project-summary-fail.html
+++ b/app/views/slurrystorage/current/project-summary-fail.html
@@ -26,12 +26,9 @@
      </h1>
 
     <div class="govuk-body">
-      <p>You can only apply for a grant of up to 50% of the standardised costs.</p>
+      <p>The minimum grant you can claim is £25,000 (50% of £50,000). The maximum grant is £250,000.</p>
     </div>
 
-{{ govukInsetText({
-    text: 'The minimum grant you can claim is £25,000 (50% of £50,000). The maximum grant is £250,000.'
-}) }}
 
 <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19"> See other grants you may be eligible for.</a><p>
       <!--See <a href="">the large countryside productivity grant guidance</a> for further information.-->
