--- a/app/views/slurrystorage/current/project-type.html
+++ b/app/views/slurrystorage/current/project-type.html
@@ -37,7 +37,7 @@ Project type
                   items: [
                 {
                   value: "Build a new store",
-                  text: "Replace an existing store that is no longer servicable",
+                  text: "Replace an existing store that is no longer serviceable",
                   checked: checked("projecttype", "Build a new store")
                 },
 
@@ -81,7 +81,7 @@ Project type
             <li>adding a new store to increase existing</li>
             <li>expanding an existing store (for example, by adding an extra ring to a steel tank)</li>
           </ul>
-          <p class="govuk-body">A store is no longer fit for purpose if it has reached the end of its design life (for example, it may be suspectable to leaks or failure).</p>
+          <p class="govuk-body">A store is no longer fit for purpose if it has reached the end of its design life (for example, it may be susceptible to leaks or failure).</p>
       </div>
    </div>
 
