--- a/app/views/slurrystorage/current/water-quality.html
+++ b/app/views/slurrystorage/current/water-quality.html
@@ -27,7 +27,7 @@ Water quality
                   name: 'waterquality',
                   fieldset: {
                       legend: {
-                          html: 'Will your slurry store be within 1km <br>of a water quality site?',
+                          html: 'Will your slurry store be within 1km<br>of a water quality protected site?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
