--- a/app/views/slurrystorage/current/item-sizes-quantities.html
+++ b/app/views/slurrystorage/current/item-sizes-quantities.html
@@ -81,7 +81,7 @@ Item sizes and quantities
     Grant amount: £55 per metre
 </div>
 <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="metre" name="metre" type="text" spellcheck="false" value="{{ data['metre'] }}" >
-  <div class="govuk-input__suffix" aria-hidden="true">item(s) </div>
+  <div class="govuk-input__suffix" aria-hidden="true">metre(s) </div>
 </div>
 
 
