--- a/app/views/slurrystorage/current/project-summary.html
+++ b/app/views/slurrystorage/current/project-summary.html
@@ -61,7 +61,7 @@ Project summary
       <tr class="govuk-table__row"></tr>
         <th scope="row" class="govuk-table__header">{{projectItemsCost[item].text}}</th>
         <td class="govuk-table__cell">{{projectItemsCost[item].formattedValue}}</td>
-        <td class="govuk-table__cell">1</td>
+        <td class="govuk-table__cell">{{projectItemsCost[item].quantity}}</td>
       </tr>
       {% endif %}
     {% endfor %}
@@ -71,7 +71,7 @@ Project summary
       <th scope="row" class="govuk-table__footer"> Total grant amount</th>
 
 
-      <td class="govuk-table__cell"><strong>£142,500</strong></td>
+      <td class="govuk-table__cell"><strong>£94,400</strong></td>
       <td class="govuk-table__cell"></td>
     </tr>
   </tbody>
