--- a/app/views/slurrystorage/current/evidence-summary.html
+++ b/app/views/slurrystorage/current/evidence-summary.html
@@ -11,82 +11,86 @@
     text: "prototype",
     classes: "govuk-tag--pink"
     },
-      html: 'This is not a full service. It is not production code and you might experience problems.'
+      html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
 
-  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
+  <a class="govuk-back-link" href="os-grid">Back</a>
 {% endblock %}
 {% block content %}
 
 
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-
-<h1 class="govuk-heading-l">Evidence summary</h1>
-
-      <h1 class="govuk-heading-l">Your answers</h1>
-      <table class="govuk-table govuk-body govuk-!-font-size-16">
-        <thead class="govuk-table__head">
-          <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header">Answers</th>
-            <th scope="col" class="govuk-table__header">Score</th>
-
-            <th scope="col" class="govuk-table__header">Change</th>
-          </tr>
-        </thead>
-        <tbody class="govuk-table__body">
-
-
-          <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header">Within 1km of air quality protected site
-            <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
-              {% for item in data['airquality'] %}
-              <li>{{ item | capitalize }}</li>
-              {% endfor %}
-              </ul>
-            </th>
-            <td class="govuk-table__cell">Average</td>
-
-            <td class="govuk-table__cell"><a href="air-quality">Change</td>
-          </tr>
-
-          <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header">Within 1km of water quality protected site
-              <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
-              {% for item in data['waterquality'] %}
-              <li>{{ item | capitalize }}</li>
-              {% endfor %}
-              </ul>
-            </th>
-            <td class="govuk-table__cell">Average</td>
-
-            <td class="govuk-table__cell"><a href="water-quality">Change</td>
-          </tr>
-
-          <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header">Planning permission
-              <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
-              <li>  {{data['planning-permission'] | capitalize}}</li>
-               </ul>
-            </th>
-            <td class="govuk-table__cell">Strong</td>
-
-            <td class="govuk-table__cell"><a href="planning-permission">Change</td>
-          </tr>
-
-        </tbody>
-      </table>
-
-
-
-<br/><br/>
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
+      <div class="govuk-grid-column-two-thirds-from-desktop">
 
-        <form class="form" action="{{ nextUrl }}" method="post">
+        <h1 class="govuk-heading-l">Check your answers before getting your results</h1>
+
+        <h2 class="govuk-heading-m">Your evidence details</h2>
+
+        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Planning permission
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['planning-permission'] }}
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="planning-permission">
+                Change<span class="govuk-visually-hidden"> name</span>
+              </a>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Planning authority
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['planning-authority'] }}
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="planning-list">
+                Change<span class="govuk-visually-hidden"> date of birth</span>
+              </a>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Planning reference
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['planning-refnumber'] }}
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="planning-list">
+                Change<span class="govuk-visually-hidden"></span>
+              </a>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              OS grid reference
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['os-grid'] }}
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="os-grid">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+
+        </div>
+       </div>
+
+       <div class="govuk-grid-row">
+         <div class="govuk-grid-column-two-thirds-from-desktop">
+
+        <form class="form" action="answers" method="post">
           <button class="govuk-button govuk-!-margin-right-1 govuk-!-padding-left-4 govuk-!-padding-right-4" data-module="govuk-button">
-            Continue
+            Get your results
           </button>
         </form>
 
