--- a/app/views/slurrystorage/current/os-grid.html
+++ b/app/views/slurrystorage/current/os-grid.html
@@ -20,7 +20,7 @@ Os grid
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="evidence" method="post">
+      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
         <h2 class="govuk-heading-l">What is the OS grid reference for your slurry store?</h2>
 
         {{ govukInput({
@@ -36,6 +36,11 @@ Os grid
         {{ govukButton({
           text: "Continue"
         }) }}
+        {% if data['COMPLETED'] == true %}
+          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+            class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Back to evidence summary
+          </button>
+        {% endif %}
       </form>
 
     </div>
