--- a/app/views/slurrystorage/current/planning-list.html
+++ b/app/views/slurrystorage/current/planning-list.html
@@ -14,13 +14,13 @@ Planning list
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
 
-  <a class="govuk-back-link" href="planning-permission">Back</a>
+  <a class="govuk-back-link" href="{{backUrl}}">Back</a>
 {% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="os-grid" method="post">
+      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
         <h2 class="govuk-heading-l">Your planning permission</h2>
         <p class="govuk-hint"> Enter the name of your planning authority and your planning reference number</p>
 
@@ -47,6 +47,11 @@ Planning list
         {{ govukButton({
           text: "Continue"
         }) }}
+        {% if data['COMPLETED'] == true %}
+          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+            class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Back to evidence summary
+          </button>
+        {% endif %}
       </form>
     </div>
    </div>
