--- a/app/views/slurrystorage/current/planning-permission.html
+++ b/app/views/slurrystorage/current/planning-permission.html
@@ -56,7 +56,7 @@
 
         {% if data['COMPLETED'] == true %}
           <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-            class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Back to score
+            class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Back to evidence summary
           </button>
         {% endif %}
       </p>
