--- a/app/views/slurrystorage/current/cover-size.html
+++ b/app/views/slurrystorage/current/cover-size.html
@@ -28,7 +28,7 @@ Cover size
             isPageHeading: true
           },
           hint: {
-            text: "Enter the cover size for the replacement, new or expanded store"
+            html: "Enter the cover size for the replacement, new or expanded store<br>Enter the size in metres squared"
           },
           classes: "govuk-input--width-5",
           id: "cover-size",
