--- a/app/views/slurrystorage/current/reference-number.html
+++ b/app/views/slurrystorage/current/reference-number.html
@@ -57,7 +57,7 @@
      <ul class="govuk-list govuk-list--bullet">
 
        <li>a storage calculation plan, which you will need to submit for review to the Environment Agency</li>
-       <li>confirmation that your project will comply with Water Resources (Control of Pollution) (Silage, Slurry and Agricultural Fuel Oil) regualations (SSAFO) and build standards (signed by you and your engineer)</li>
+       <li>confirmation that your project will comply with Water Resources (Control of Pollution) (Silage, Slurry and Agricultural Fuel Oil) regulations (SSAFO) and build standards (signed by you and your engineer)</li>
        <li>a nutrient management plan</li>
        <li>a declaration that you will comply with monitoring requirements</li>
      </ul>
