--- a/app/views/slurrystorage/current/os-grid.html
+++ b/app/views/slurrystorage/current/os-grid.html
@@ -25,7 +25,7 @@ Os grid
 
         {{ govukInput({
           label: {
-            text: "Enter os grid reference number, for example AB12478975"
+            text: "Enter OS grid reference number, for example AB12478975"
           },
           classes: "govuk-input--width-20",
           id: "os-grid",
