--- a/app/views/slurrystorage/current/standardised-costs.html
+++ b/app/views/slurrystorage/current/standardised-costs.html
@@ -1,15 +1,9 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-
+Standardised costs
 {% endblock %}
 
-{% block header %}
-<!-- Blank header with no service name for the start page -->
-
-{{ govukHeader() }}
-
-{% endblock %}
 
 {% block beforeContent %}
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
