--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -50,8 +50,8 @@
         <h2 class="govuk-heading-l">Design history</h2>
         <p class='govuk-list app-list--definition'>
           <a href='slurrystorage/current/start' class="govuk-link--no-visited-state"><strong>Version 3 (current)</a></strong><br>
-          Changes to implement post-user testing. First round of iterations (Issue 78 to Issue 98.)<br>
-            <span class="govuk-body govuk-!-font-size-14">#Last updated on 16 June 2022<br/>
+          Changes to implement post-user testing. Third round of iterations (Issue 78 to Issue 98.)<br>
+            <span class="govuk-body govuk-!-font-size-14">#Last updated on 18 June 2022<br/>
             </span></p>
 
 
