--- a/app/views/slurrystorage/current/cover-type.html
+++ b/app/views/slurrystorage/current/cover-type.html
@@ -53,7 +53,7 @@ What type of cover will you have?
               <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="covertype2" name="covertype" type="radio" value="None of the above" {{ checked("covertype", "None of the above") }}>
         <label class="govuk-label govuk-radios__label" for="covertype2">
-          None of the above
+          Not needed, the slurry is treated with acidification
         </label>
       </div>
             </div>
