--- a/app/views/slurrystorage/current/existing-size-storage-fail.html
+++ b/app/views/slurrystorage/current/existing-size-storage-fail.html
@@ -29,7 +29,7 @@
       <p class="govuk-body">This grant is to: <br>
         <ul class="govuk-body">
           <li>expand current storage levels	to 	6 months</li>
-          <li>make your storage serviceable if capacity is already 6 months or more</li>
+          <li>make your storage fit for purpose if capacity is already 6 months or more</li>
         </ul>
       </p>
 
