--- a/app/views/slurrystorage/current/planned-size-storage.html
+++ b/app/views/slurrystorage/current/planned-size-storage.html
@@ -74,7 +74,7 @@ Planned size storage
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
           <p class="govuk-body">This grant is to get your serviceable storage levels to 6 months.<br><br>
-            For example, if you have 4 months' storage, we will fund another 2 months.<br><br>
+            For example, if you have 4 months' serviceable storage, we will fund another 2 months.<br><br>
             Any capacity above 6 months is not covered by the grant.<br><br>
             You must maintain at least 6 months' capacity for the duration of the grant funding agreement.</p>
       </div>
