--- a/app/views/slurrystorage/current/planning-permission.html
+++ b/app/views/slurrystorage/current/planning-permission.html
@@ -67,10 +67,10 @@
 
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Funding priorities</span>
+          <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>RPA wants to fund projects that have planning permission. <br><br>You must have applied for planning permission before you submit a full application.  <br><br>
-Any planning permission must be in place by 31 December 2022. 
+          <p>Any planning permission must be in place by 31 December 2022. <br><br>You must have applied for planning permission before you submit a full application. 
+
           </p>
           <a href="#">
           </a>
