--- a/app/views/slurrystorage/current/potential-grant.html
+++ b/app/views/slurrystorage/current/potential-grant.html
@@ -26,7 +26,7 @@ Potential grant funding
       Potential grant funding
     </h1>
 
-    <p class="govuk-body">Based on the standardised costs for each item and the approximate size and quantities you entered, we estimate you could be eligible for a grant of  £{{ 1250000| toFixed(2) | commafy  }}.</p>
+    <p class="govuk-body">Based on the standardised costs for each item and the approximate <br>size and quantities you entered, we estimate you could be eligible for <br>a grant of  £{{ 247000| toFixed(2) | commafy  }}.</p>
 
 
 
