--- a/app/views/slurrystorage/current/start.html
+++ b/app/views/slurrystorage/current/start.html
@@ -33,7 +33,7 @@
         <p>Use this service to:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>check if you can apply for a grant for your project (takes about 5 minutes)</li>
-          <li>check how much grant funding you could get (takes about 10 minutes if you have all the project details)</li>
+          <li>estimate how much grant funding you could get (takes about 10 minutes if you have all the project details)</li>
         </ul>
 
         <div class="govuk-body">
