--- a/app/views/slurrystorage/current/answers.html
+++ b/app/views/slurrystorage/current/answers.html
@@ -29,10 +29,10 @@
     <div class="govuk-inset-text">
       <h2 class="govuk-heading-m">Eligible to apply</h2>
     </div>
-    <p class="govuk-body">RPA wants to fund projects that have a higher environmental impact.<br><br>
+    <p class="govuk-body">RPA wants to fund projects that have a higher environmental benefit.<br><br>
       We will do this by inviting applicants with projects near protected sites to submit a full application.<br><br>
       Depending on the number of applications received, we may invite projects outside protected sites to submit a full application.</p>
-    
+
   <div class="govuk-warning-text">
 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
 <strong class="govuk-warning-text__text">
